@@ -46,6 +46,7 @@ use Brainworxx\Krexx\Analyse\Model;
 use Brainworxx\Krexx\View\ViewConstInterface;
 use ReflectionClass;
 use ReflectionProperty;
+use Throwable;
 
 /**
  * Class properties' analysis methods.
@@ -187,11 +188,31 @@ class ThroughProperties extends AbstractCallback implements
             $additional .= 'private ';
         }
 
+        // There are readonly properties since PHP 8.1 available.
+        // In a rather buggy state. When the property is not readonly, this may
+        // trigger an
+        // "Error : Internal error: Failed to retrieve the reflection object".
+        try {
+            if ($refProperty->isReadOnly() === true) {
+                $additional .= 'readonly ';
+            }
+        } catch (Throwable $exception) {
+            // Do nothing.
+            // We ignore this one.
+        }
+
         if (empty($refProperty->isUnset) === false) {
-            // This one was unset during runtime.
-            // We need to tell the dev. Accessing an unset property may trigger
-            // a warning.
-            $additional .= 'unset ';
+            if (method_exists($refProperty, 'hasType') === true && $refProperty->hasType() === true) {
+                // Types properties where introduced in 7.4.
+                // This one was either unset, or never received a value in the
+                // first place. Either way, it's status is uninitialized.
+                $additional .= 'uninitialized ';
+            } else {
+                // This one was unset during runtime.
+                // We need to tell the dev. Accessing an unset property may trigger
+                // a warning.
+                $additional .= 'unset ';
+            }
         }
 
         // Test if the property is inherited or not by testing the
