@@ -1,4 +1,6 @@
 4.1.4
+- Added support for readonly properties
+- Bugfix: Correctly identify uninitialized properties.
 
 4.1.3
 - Added microtime analysis to the float routing.
